--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/home-pag/home-pag.component.scss
@@ -1,7 +1,3 @@
-body {
-  overflow-y: scroll !important;
-}
-
 .card-posts {
   position: relative;
   width: 100%;
@@ -34,7 +30,9 @@ body {
   display: flex;
 }
 
-
+#data{
+  font-family:monospace;
+}
 .overlay {
   position: absolute;
   top: 0;
