--- a/Capstone-FrontEnd/Capstone_Project/src/styles.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/styles.scss
@@ -48,7 +48,7 @@
 }
 
 .stars {
-  background: #1b1e21 url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
+  background: #000e1b url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
   position: absolute;
   top: 0;
   bottom: 0;
