--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/user-profile/user-profile.component.scss
@@ -217,8 +217,8 @@ div li {
   }
 
   &__img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     margin-left: auto;
     margin-right: auto;
     transform: translateY(-35%);
@@ -226,12 +226,18 @@ div li {
     overflow: hidden;
     position: relative;
     z-index: 0;
-    box-shadow: 0px 5px 50px 0px rgb(108, 68, 252), 0px 0px 0px 7px rgba(107, 74, 255, 0.5);
+    box-shadow: 0px 5px 50px 0px #405de6, 0px 0px 0px 7px #081451;
+
+    @media screen and (max-width: 860px) and (min-width: 768px) {
+        display: none !important;
+    }
 
     @media screen and (max-width: 576px) {
-      width: 120px;
-      height: 120px;
+      display: block !important;
+      width: 100px;
+      height: 100px;
     }
+
 
     img {
       display: block;
@@ -253,8 +259,12 @@ div li {
   &__name {
     font-weight: 700;
     font-size: 24px;
-    color: #6944ff;
+    color: #00023c;
     margin-bottom: 0px;
+    -webkit-box-shadow: inset 0px 5px 26px 28px #7FFFD4,0px 5px 11px -90px #7FFFD4;
+    -moz-box-shadow: inset 0px 5px 26px 28px #7FFFD4,0px 5px 11px -90px #7FFFD4;
+    -o-box-shadow: inset 0px 5px 26px 28px #7FFFD4,0px 5px 11px -90px #7FFFD4;
+    box-shadow: inset 0px 5px 26px 28px #7FFFD4,0px 5px 11px -90px #7FFFD4;
   }
 
   &__txt {
@@ -265,7 +275,7 @@ div li {
 
     strong {
       font-weight: 700;
-      color: #ffffff;
+      color: #f7f7f7;
     }
 
   }
@@ -327,7 +337,7 @@ div li {
 
       @media screen and (max-width: 768px) {
         width: 35px;
-        height: 35;
+        height: 35px;
         margin: 5px;
       }
 
