Aggiunto Git e Linkedin a icone

--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.html
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.html
@@ -31,10 +31,10 @@
           <a>
             <div class="d-flex justify-content-center align-items-center">
               <div>
-                <i class="bi bi-github"></i>
+                <a href="https://github.com/DepasqualeAndrea"><i class="bi bi-github"></i></a>
               </div>
               <div>
-                <span class="nav-text text-center">Git Hub</span>
+               <a href="https://github.com/DepasqualeAndrea"><span  class="nav-text text-center">Git Hub</span></a>
               </div>
             </div>
           </a>
@@ -44,10 +44,10 @@
           <a>
             <div class="d-flex justify-content-center align-items-center">
               <div>
-                <i class="bi bi-linkedin"></i>
+                <a href="https://www.linkedin.com/in/andrea-de-paquale-002014291/?locale=it_IT"><i class="bi bi-linkedin" ></i></a>
               </div>
               <div>
-                <span class="nav-text text-center">Linkedin</span>
+                <a href="https://www.linkedin.com/in/andrea-de-paquale-002014291/?locale=it_IT"><span  class="nav-text text-center">Linkedin</span></a>
               </div>
             </div>
           </a>
