--- a/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.scss
+++ b/Capstone-FrontEnd/Capstone_Project/src/app/components/nav/nav.component.scss
@@ -30,7 +30,10 @@
   align-items: flex-start;
 }
 
-
+a{
+  text-decoration: none;
+  color: #fff ;
+}
 .navbar ul {
   list-style: none;
   padding: 0;
